feat: 模拟ppu上报设备

--- a/deployments/daemonset.yaml
+++ b/deployments/daemonset.yaml
@@ -76,7 +76,7 @@ spec:
           path: /dev
           type: Directory
       nodeSelector:
-        kubernetes.io/os: linux
+        ppu: on
       tolerations:
       - key: node-role.kubernetes.io/master
         operator: Exists
